fix embed title clipping

--- a/src/containers/sermon/embed.module.scss
+++ b/src/containers/sermon/embed.module.scss
@@ -62,6 +62,8 @@
 
 .title {
 	padding-right: 10vw;
+	padding-bottom: 16px;
+	margin-bottom: 0;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
